fix(auth): resolve 401 login issue, add case-insensitive lookups, and refine api.js interceptor